// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStore should render 1`] = `
<span>
  Store text: 
  foo
</span>
`;

exports[`useStore should render 2`] = `
<span>
  Store text: 
  bar
</span>
`;

exports[`useStore should throw 1`] = `"expect useStore argument to be a store"`;

exports[`useStoreMap 1`] = `
<ul>
  <li>
    Alex
    : 
    20
  </li>
  <li>
    John
    : 
    30
  </li>
</ul>
`;

exports[`useStoreMap 2`] = `
<ul>
  <li>
    Alex
    : 
    21
  </li>
  <li>
    John
    : 
    30
  </li>
</ul>
`;

exports[`useStoreMap 3`] = `
<ul>
  <li>
    John
    : 
    30
  </li>
</ul>
`;
